# esp-gateway

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ja.md  build_assets.sh  idf_component.yml  library.json
.github/workflows/: build.yml
cmake/: esp_gateway_component.cmake
docs/: README.md  index.html
examples/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
examples/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/minimal/: CMakeLists.txt  README.md
examples/minimal/components/esp_gateway/: CMakeLists.txt
examples/minimal/main/: CMakeLists.txt  main.cpp
examples/src/: main.cpp
include/earbrain/gateway/: device_detail.hpp  device_info.hpp  gateway.hpp  http_server.hpp  logging.hpp  mdns_service.hpp  metrics.hpp  task_helpers.hpp  validation.hpp  wifi_credentials.hpp  wifi_scan.hpp  wifi_service.hpp
include/earbrain/gateway/handlers/: device_handler.hpp  device_info_handler.hpp  handler_helpers.hpp  health_handler.hpp  log_handler.hpp  mdns_handler.hpp  metrics_handler.hpp  portal_detail_handler.hpp  portal_handler.hpp  wifi_handler.hpp
include/earbrain/gateway/middlewares/: logging.hpp
include/eb/: DevicePortal.h
portal/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
portal/src/: app.tsx  main.tsx  styles.css
portal/src/components/: BreadcrumbSection.tsx  ConnectionBadge.tsx  ConnectionLostDialog.tsx  LanguageSelector.tsx  Toast.tsx  WifiStatusCard.tsx  breadcrumb.tsx
portal/src/components/device/: DeviceLogsCard.tsx  DeviceOverviewCard.tsx  MdnsCard.tsx  SystemMetricsCard.tsx
portal/src/components/wifi/: SecurityBadge.tsx  WifiConnectModal.tsx  WifiNetworkCard.tsx  WifiNetworkList.tsx  WifiSignalIndicator.tsx
portal/src/hooks/: useApi.ts  useConnectionMonitor.ts  useHealth.ts  usePolling.ts
portal/src/i18n/: context.tsx  translations.ts
portal/src/mocks/: handlers.ts
portal/src/pages/: device.tsx  home.tsx  wifi.tsx
portal/src/pages/device/: info.tsx  logs.tsx  mdns.tsx  metrics.tsx
portal/src/types/: device.ts  portal.ts  wifi.ts
portal_assets/: app.js.S  index.css.S  index.html.S
src/: DevicePortal.cpp  device_info.cpp  gateway.cpp  http_server.cpp  logging.cpp  mdns_service.cpp  validation.cpp  wifi.cpp  wifi_credentials.cpp  wifi_service.cpp  wifi_softap.cpp
src/handlers/: device_handler.cpp  device_info_handler.cpp  health_handler.cpp  log_handler.cpp  mdns_handler.cpp  metrics_handler.cpp  portal_detail_handler.cpp  portal_handler.cpp  wifi_handler.cpp
src/json/: device_detail.hpp  device_info.hpp  http_response.hpp  json_helpers.hpp  log_entries.hpp  metrics.hpp  portal_detail.hpp  wifi_credentials.hpp  wifi_scan.hpp  wifi_status.hpp
src/middlewares/: logging.cpp
